[gd_scene load_steps=7 format=2]

[ext_resource path="res://GFX/Sheep.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Sheep.gd" type="Script" id=2]
[ext_resource path="res://Items/KKola.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 15.5513
height = 25.5678

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 13.7523

[node name="Sheep" type="KinematicBody2D" groups=[
"Enemies",
]]
z_index = 1
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )
cola_bottle = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 6 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="HurtTimer" type="Timer" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 3 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_HurtTimer_timeout"]
